# arg_gpt

./: .gitignore  LICENSE  README.md  example.py  example_functions.py  pyproject.toml  requirements.txt  setup.py
arg_gpt/: __init__.py  ai_func.py  arg_prompt.py  doc_string_helpers.py  gpt_function.py  gpt_function_reflection.py  gpt_helpers.py  prompts.py
examples/: example_cmd.py  example_functions.py  example_groq.py
tests/: test_ai_func.py  test_gpt_function_reflection.py  test_gpt_helpers.py  test_prompts.py
